--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "login",
         "signin"
     ],
-    "homepage": "https://github.com/mad-web/social-auth",
+    "homepage": "https://github.com/mad-web/laravel-social-auth",
     "license": "MIT",
     "authors": [
         {
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": "~7.0",
+        "php": "^7.1",
         "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
         "illuminate/events": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
         "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
