--- a/composer.json
+++ b/composer.json
@@ -22,18 +22,18 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/events": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/routing": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/broadcasting": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
+        "php": "^7.2",
+        "illuminate/support": "~5.5.0|~5.8.0|^6.0",
+        "illuminate/events": "~5.5.0|~5.8.0|^6.0",
+        "illuminate/database": "~5.5.0|~5.8.0|^6.0",
+        "illuminate/routing": "~5.5.0|~5.8.0|^6.0",
+        "illuminate/broadcasting": "~5.5.0|~5.8.0|^6.0",
         "socialiteproviders/manager": "~3.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0.0",
         "phpunit/phpunit": "^6.5|^7.0|^8.0",
-        "orchestra/testbench": "~3.5.0|~3.6.0|~3.7.0|~3.8.0"
+        "orchestra/testbench": "~3.5.0|~3.8.0|^4.0"
     },
     "autoload": {
         "psr-4": {
