--- a/composer.json
+++ b/composer.json
@@ -22,18 +22,19 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "illuminate/support": "~5.5.0|~5.8.0|^6.0",
-        "illuminate/events": "~5.5.0|~5.8.0|^6.0",
-        "illuminate/database": "~5.5.0|~5.8.0|^6.0",
-        "illuminate/routing": "~5.5.0|~5.8.0|^6.0",
-        "illuminate/broadcasting": "~5.5.0|~5.8.0|^6.0",
-        "socialiteproviders/manager": "~3.0"
+        "php": "^7.2.5",
+        "illuminate/broadcasting": "^6.0|^7.0",
+        "illuminate/database": "^6.0|^7.0",
+        "illuminate/events": "^6.0|^7.0",
+        "illuminate/routing": "^6.0|^7.0",
+        "illuminate/support": "^6.0|^7.0",
+        "laravel/ui": "^1.0|^2.0",
+        "socialiteproviders/manager": "^3.5"
     },
     "require-dev": {
-        "mockery/mockery": "^1.0.0",
-        "phpunit/phpunit": "^6.5|^7.0|^8.0",
-        "orchestra/testbench": "~3.5.0|~3.8.0|^4.0"
+        "mockery/mockery": "^1.3",
+        "phpunit/phpunit": "^8.0",
+        "orchestra/testbench": "^4.0|^5.0"
     },
     "autoload": {
         "psr-4": {
