--- a/composer.json
+++ b/composer.json
@@ -23,18 +23,18 @@
     ],
     "require": {
         "php": "^7.2.5",
-        "illuminate/broadcasting": "^6.0|^7.0",
-        "illuminate/database": "^6.0|^7.0",
-        "illuminate/events": "^6.0|^7.0",
-        "illuminate/routing": "^6.0|^7.0",
-        "illuminate/support": "^6.0|^7.0",
-        "laravel/ui": "^1.0|^2.0",
-        "socialiteproviders/manager": "^3.5"
+        "illuminate/broadcasting": "^6.0 || ^7.0 || ^8.0",
+        "illuminate/database": "^6.0 || ^7.0 || ^8.0",
+        "illuminate/events": "^6.0 || ^7.0 || ^8.0",
+        "illuminate/routing": "^6.0 || ^7.0 || ^8.0",
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0",
+        "laravel/ui": "^1.0 || ^2.0 || ^3.0",
+        "socialiteproviders/manager": "^3.6"
     },
     "require-dev": {
         "mockery/mockery": "^1.3",
-        "phpunit/phpunit": "^8.0",
-        "orchestra/testbench": "^4.0|^5.0"
+        "phpunit/phpunit": "^8.0 || ^9.3",
+        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0"
     },
     "autoload": {
         "psr-4": {
